# validate

./: .gitignore  Cargo.toml  README.md
src/: addresses.rs  cli.yml  lib.rs  main.rs
src/stream/: geo.rs  mod.rs  out.rs  point.rs  poly.rs
src/types/: mod.rs  point.rs  polygon.rs
